ghc-4335c07/testsuite/tests/typecheck/should_fail/tcfail214.hs
{-# LANGUAGE TypeFamilies, ConstraintKinds #-}
module ShouldFail where

import GHC.Exts( Constraint )

type family F a :: Constraint

class C a where
instance (F a) => C [a] where
